# pegaflow

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  pegaflow.code-workspace  prek.toml  typos.toml
pegaflow-core/: Cargo.toml
pegaflow-core/benches/: allocator_bench.rs  block_key_copy.rs  cpu_path.rs  pinned_copy.rs  ssd_multi_path.rs  transfer_batch.rs  transfer_h2d.rs  transfer_query.rs  transfer_rebuild.rs  uds_latency.rs  uring_bench.rs
pegaflow-core/examples/: encode_profile.rs  pinned_alloc_parallel.rs  rebuild_profile.rs
pegaflow-core/src/: allocator.rs  block.rs  cache.rs  gpu_worker.rs  instance.rs  layout.rs  lease.rs  lib.rs  load_plan.rs  metrics.rs  numa.rs  offload.rs  pd_receive.rs  pinned_mem.rs  pinned_pool.rs  seal_offload.rs  ssd_cache.rs  storage.rs  sync_state.rs  trace.rs  transfer.rs  transfer_runs.rs  unregister.rs  uring.rs
pegaflow-core/src/backing/: mod.rs  p2p.rs  rdma.rs  rdma_fetch.rs  ssd.rs  ssd_cache.rs  transfer_lock_guard.rs  uring.rs
pegaflow-core/src/instance/: tests.rs
pegaflow-core/src/internode/: README.md  client.rs  metaserver_client.rs  metaserver_query.rs  mod.rs  p2p_service.rs  registrar.rs  registry.rs  remote_fetch_worker.rs  service_discovery.rs  types.rs
pegaflow-core/src/metaserver/: mod.rs  service.rs  store.rs
pegaflow-core/src/storage/: backing_tier.rs  mod.rs  prefetch.rs  read_cache.rs  remote_fetch.rs  tier_attribution.rs  transfer_lock.rs  write_path.rs
pegaflow-core/src/transfer/: kernel.rs  memcpy.rs  mod.rs
pegaflow-core/src/transfer_plan/: bench_support.rs  encode.rs  materialize.rs  merge.rs  mod.rs  rebuild.rs  schema.rs  view.rs
pegaflow-core/tests/: arc_lifecycle.rs  cache_concurrent.rs  engine_basic.rs  eviction.rs  p2p_backing.rs  pinned_pool_concurrent.rs  prefetch_lease.rs  prefetch_pin.rs  prefix_semantics.rs  save_validation.rs  ssd_cache.rs  ssd_cache_concurrent.rs  storage_concurrent.rs  unregister_lifecycle.rs
pegaflow-core/tests/common/: config.rs  gpu_buffer.rs  harness.rs  helpers.rs  mod.rs
pegaflow-metaserver/: Cargo.toml  README.md  build.rs  xpega_design.md
pegaflow-metaserver/benches/: unregister_node.rs
pegaflow-metaserver/examples/: basic_client.rs
pegaflow-metaserver/src/: http_server.rs  lib.rs  metric.rs  service.rs  store.rs
pegaflow-server/: Cargo.toml  README.md  build.rs
pegaflow-server/examples/: p2p_bench.rs
pegaflow-server/src/: build_info.rs  check_cuda_version.rs  fd_channel.rs  http_server.rs  lib.rs  lifecycle.rs  main.rs  metric.rs  rdma_service.rs  registry.rs  service.rs  session.rs  teardown.rs  trace.rs  utils.rs
pegaflow-server/src/registry/: cleanup.rs  tests.rs
pegaflow-server/src/service/: helpers.rs  tests.rs  validation.rs
pegaflow-server/tests/: http_cleanup_hang_repro.rs  mock_vllm_rpc_e2e.rs  native_vmm_rpc_e2e.rs  p2p_rdma.rs  rdma_lease_e2e.rs
pegaflow-server/tests/common/: mod.rs  p2p_harness.rs
pegaflow-transfer/: Cargo.toml  README.md  build.rs
pegaflow-transfer-wire/: Cargo.toml
pegaflow-transfer-wire/src/: lib.rs
pegaflow-transfer/src/: api.rs  backend.rs  bench_support.rs  control_protocol.rs  cpu_affinity.rs  cuda_sys.rs  cudart_sys.rs  domain_address.rs  domain_group.rs  engine.rs  error.rs  fabric_engine.rs  imm_count.rs  interface.rs  lib.rs  libibverbs_sys.rs  logging.rs  mr.rs  provider.rs  provider_dispatch.rs  rdma_op.rs  rdma_topo.rs  sideway_backend.rs  topo.rs  transfer_engine.rs  transfer_engine_builder.rs  worker.rs
pegaflow-transfer/src/cuda_lib/: cumem.rs  driver.rs  error.rs  event.rs  gdr.rs  mem.rs  mod.rs  rt.rs
pegaflow-transfer/src/rc_backend/: mod.rs  runtime.rs  session.rs  state.rs
pegaflow-transfer/src/sideway_backend/: control.rs  mod.rs  qp.rs  rdma_op.rs  runtime.rs  session.rs
pegaflow-transfer/src/utils/: defer.rs  hex.rs  memory.rs  mod.rs  obj_pool.rs
pegaflow-transfer/src/v2/: api.rs  cpu_affinity.rs  domain_group.rs  error.rs  fabric_engine.rs  host_buffer.rs  imm_count.rs  interface.rs  mod.rs  mr.rs  provider.rs  provider_dispatch.rs  rdma_op.rs  topo.rs  transfer_engine.rs  transfer_engine_builder.rs  worker.rs
pegaflow-transfer/src/verbs/: mod.rs  verbs_address.rs  verbs_devinfo.rs  verbs_domain.rs  verbs_qp.rs  verbs_rdma_op.rs
pegaflow-transfer/tests/: rdma_cpu_it.rs  rdma_gpu_it.rs  write_imm.rs
python/: Cargo.toml  README.md  pyproject.toml
python/pegaflow/: __init__.py  _bin_utils.py  _metaserver.py  _server.py  client.py  compat.py  connector copy.py  connector.py  engine_server.py  ipc_wrapper.py  kv_transfer.py  patch_vllm.py  pd_router.py  pegaflow.pyi  vllm_plugin.py  vmm_ipc.py
python/pegaflow/connector/: __init__.py  common.py  connector_metrics.py  egress.py  pd_connector.py  scheduler.py  state_manager.py  worker.py
python/pegaflow/nixl_connector/: README.md  __init__.py  base_scheduler.py  base_worker.py  connector.py  metadata.py  pega_pull_scheduler.py  pega_pull_worker.py  pega_push_worker.py  pega_rdma_v1.py  pull_scheduler.py  pull_worker.py  push_scheduler.py  push_worker.py  rdma_control.py  rdma_transport.py  scheduler.py  stats.py  tp_mapping.py  utils.py  worker.py
python/src/: lib.rs  pd_rdma.rs  rdma_v1.rs  transfer.rs
python/tests/: README.md  __init__.py  conftest.py  noop_kv_connector.py  pd_connector_test_utils.py  save_backlog_kill_helper.py  session_crash_helper.py  test_combine_hashes.py  test_connector_fault_tolerance.py  test_connector_metrics.py  test_derive_namespace.py  test_engine_client.py  test_ipc_mapping_lifetime.py  test_ipc_wrapper.py  test_mla_replica_registration.py  test_namespace.py  test_pd_connector.py  test_pd_connector_flow.py  test_pd_connector_layout.py  test_pd_tail_save.py  test_pega_nixl_rdma_transport.py  test_query_prefetch_fallback.py  test_session_watcher.py  test_unit_stubs.py  test_vllm_e2e_correctness.py  test_vllm_fuzz.py  test_vllm_p2p_pp4_e2e.py  test_vllm_query_probe_stress.py  test_vllm_save_only_e2e.py  test_vllm_warm_hit_stress.py  test_vmm_ipc.py  test_worker_kv_layout.py  test_worker_split_layout_diagnostic.py  unit_stubs.py  vllm_helpers.py
(+126 files in other folders)
