[workspace]
members = [
  "pegaflow-common",
  "pegaflow-core",
  "pegaflow-proto",
  "pegaflow-server",
  "pegaflow-metaserver",
  "pegaflow-transfer",
  "python",
]
resolver = "2"

[workspace.package]
version = "0.21.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Workspace members
pegaflow-common = { path = "pegaflow-common" }
pegaflow-core = { path = "pegaflow-core", default-features = false }
pegaflow-transfer = { path = "pegaflow-transfer" }
sideway = "0.4.1"

# Core dependencies
cudarc = { version = "0.19.3" }
offset-allocator = "0.2.0"
hashlink = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
rand = "0.10"
shared_memory = "0.12"
uuid = { version = "1.22", features = ["v4"] }
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
crossbeam = "0.8"
dashmap = "6.1"
opentelemetry = { version = "0.31.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = [
  "trace",
  "metrics",
  "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.31.0", features = [
  "trace",
  "metrics",
  "rt-tokio-current-thread",
] }
opentelemetry-prometheus = "0.31"
prometheus = "0.14"
bytesize = "2.3.1"
ahash = "0.8"
futures = "0.3"

# HTTP/Web
axum = "0.8"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"

# grpc
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

# Kubernetes
kube = { version = "3.0", features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.27", features = ["v1_33"] }

# Python bindings
pyo3 = { version = "0.28" }
pyo3-build-config = { version = "0.28", features = ["resolve-config"] }
# Redis

# Logging
log = "0.4"
logforth = { version = "0.29", features = ["starter-log","layout-text"] }
colored = "3.1"
fastrace = "0.7.17"

# Dev dependencies
criterion = "0.8"

tikv-jemallocator = "0.6.1"

[workspace.lints.clippy]
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
inefficient_to_string = "warn"
let_unit_value = "warn"
manual_assert = "warn"
manual_ok_or = "warn"
semicolon_if_nothing_returned = "warn"
todo = "warn"
unnecessary_wraps = "warn"
useless_transmute = "warn"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
