[package]
name = "pegaflow-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["cuda-12"]
cuda-12 = ["cudarc/cuda-12040"]
cuda-128 = ["cudarc/cuda-12080"]
cuda-13 = ["cudarc/cuda-13000"]
tracing = ["fastrace"]

[dependencies]
pegaflow-common.workspace = true
cudarc.workspace = true
log.workspace = true
logforth.workspace = true
offset-allocator.workspace = true
hashlink.workspace = true
tokio.workspace = true
shared_memory.workspace = true
uuid.workspace = true
opentelemetry.workspace = true
bytesize.workspace = true
serde.workspace = true
libc.workspace = true
rand.workspace = true
ahash.workspace = true
io-uring = "0.7"
futures.workspace = true
parking_lot.workspace = true
fastrace = { workspace = true, optional = true }
kube.workspace = true
k8s-openapi.workspace = true
tonic.workspace = true
dashmap.workspace = true
smallvec = "1"
pegaflow-proto = { path = "../pegaflow-proto" }
pegaflow-transfer = { path = "../pegaflow-transfer" }
mea = "0.6.3"

[dev-dependencies]
criterion.workspace = true
cudarc.workspace = true
tokio.workspace = true
tempfile = "3"
clap.workspace = true
hdrhistogram = "7.5.4"

[[bench]]
name = "transfer_batch"
harness = false

[[bench]]
name = "pinned_copy"
harness = false

[[bench]]
name = "uds_latency"
harness = false

[[bench]]
name = "uring_bench"
harness = false

[[example]]
name = "pinned_alloc"
