[package]
name = "pegaflow-core"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["cuda-12", "rdma"]
cuda-12 = ["cudarc/cuda-12080", "cudarc/nvrtc", "pegaflow-transfer?/cuda-12"]
cuda-13 = ["cudarc/cuda-13000", "cudarc/nvrtc", "pegaflow-transfer?/cuda-13"]
rdma = ["dep:pegaflow-transfer"]
tracing = ["fastrace"]

[dependencies]
pegaflow-common.workspace = true
cudarc.workspace = true
log.workspace = true
logforth.workspace = true
offset-allocator.workspace = true
hashlink.workspace = true
tokio.workspace = true
shared_memory.workspace = true
uuid.workspace = true
opentelemetry.workspace = true
bytesize.workspace = true
libc.workspace = true
rand.workspace = true
ahash.workspace = true
io-uring = "0.7"
futures.workspace = true
parking_lot.workspace = true
fastrace = { workspace = true, optional = true }
tonic.workspace = true
dashmap.workspace = true
smallvec.workspace = true
pegaflow-proto = { path = "../pegaflow-proto" }
pegaflow-transfer-wire.workspace = true
pegaflow-transfer = { path = "../pegaflow-transfer", default-features = false, optional = true }
mea.workspace = true

[dev-dependencies]
criterion.workspace = true
cudarc.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tempfile = "3"

[[bench]]
name = "pinned_copy"
harness = false

[[bench]]
name = "uds_latency"
harness = false

[[bench]]
name = "cpu_path"
harness = false

[[bench]]
name = "transfer_h2d"
harness = false

[[example]]
name = "pinned_alloc"

[[example]]
name = "pinned_alloc_parallel"
