[package]
name = "pegaflow-metaserver"
version.workspace = true
edition.workspace = true
default-run = "pegaflow-metaserver"

[lints]
workspace = true

[lib]
name = "pegaflow_metaserver"
path = "src/lib.rs"

[[bin]]
name = "pegaflow-metaserver"
path = "src/main.rs"

[dependencies]
pegaflow-common.workspace = true
pegaflow-proto = { path = "../pegaflow-proto" }
prost.workspace = true
tonic.workspace = true
tokio.workspace = true
clap.workspace = true
log.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-prometheus.workspace = true
prometheus.workspace = true
axum.workspace = true
