[package]
name = "pegaflow-transfer-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire schema for cross-node QueryBlocksForTransfer RDMA fetch"

[lints]
workspace = true

[dependencies]
postcard = { version = "1.1", features = ["alloc", "use-std"] }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true, features = ["serde"] }
