[package]
name = "pegaflow-transfer"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
sideway.workspace = true
log.workspace = true
pegaflow-common.workspace = true
thiserror = "2.0"
serde.workspace = true
bincode = { version = "2.0.1", features = ["serde"] }
libc.workspace = true
