[package]
name = "pegaflow-transfer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
parking_lot.workspace = true
sideway.workspace = true
log.workspace = true
pegaflow-common.workspace = true
thiserror = "2.0"
serde.workspace = true
bincode = { version = "2.0.1", features = ["serde"] }
libc.workspace = true
clap.workspace = true
mea = "0.6.3"

[[bin]]
name = "pegaflow-cpu-bench"
path = "src/bin/cpu_bench.rs"
