[package]
name = "pegaflow-transfer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["cudarc/cuda-12080"]
cuda-13 = ["cudarc/cuda-13000"]
tokio = ["dep:tokio"]

[dependencies]
parking_lot.workspace = true
sideway.workspace = true
log.workspace = true
pegaflow-common.workspace = true
thiserror = "2.0"
serde.workspace = true
bincode = { version = "2.0.1", features = ["serde"] }
libc.workspace = true
clap.workspace = true
mea.workspace = true

# v2 RDMA stack deps. This path is always compiled for pegaflow-transfer.
anyhow.workspace = true
bytes.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
mockall = "0.13"
oneshot = "0.1"
postcard = { version = "1.1", features = ["alloc", "use-std"] }
smallvec.workspace = true
syscalls = "0.7"
tokio = { workspace = true, optional = true }
cudarc.workspace = true

[build-dependencies]
bindgen = "0.72"
cc = "1.2"

[[bin]]
name = "pegaflow-cpu-bench"
path = "src/bin/cpu_bench.rs"
