[package]
name = "pegaflow-py"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pegaflow"
crate-type = ["cdylib"]

# Binary for pegaflow-server (will be included in wheel by maturin)
[[bin]]
name = "pegaflow-server-py"
path = "src/bin/server.rs"

# Binary for pegaflow-metaserver (will be included in wheel by maturin)
[[bin]]
name = "pegaflow-metaserver-py"
path = "src/bin/metaserver.rs"

[features]
default = ["pegaflow-core/default", "pegaflow-server/default"]
cuda-13 = ["pegaflow-core/cuda-13", "pegaflow-server/cuda-13"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] }
pegaflow-common.workspace = true
pegaflow-core = { workspace = true, default-features = false }
pegaflow-proto = { path = "../pegaflow-proto" }
pegaflow-server = { path = "../pegaflow-server", default-features = false }
pegaflow-metaserver = { path = "../pegaflow-metaserver", default-features = false }
tokio.workspace = true
tonic.workspace = true
log.workspace = true
